--- a/css/style.css
+++ b/css/style.css
@@ -5936,3 +5936,280 @@ span#open_nav {
 }
 
 
+/* Prabhat sir code popus.html(02-03-2023.... */
+/*Start----popup-css*/
+.text-left{text-align: left;}
+#pills-tabContent .user-online-g.text-left {
+    box-shadow: unset;
+}
+.pl-0 {
+    padding-left: 0;
+}
+#pills-tabContent .user-online-g.text-left img.legal-1 {
+    width: 90%;
+}
+img.popup-prem {
+    width: 65%;
+}
+.modal-popups .modal-header {
+    border-bottom: 0px solid #dee2e6;
+}
+
+.modal-popups  .btn-close {
+    margin: 0 0 0 0;
+    background: #fff;
+    opacity: 1;
+    padding: 12px;
+    line-height: 1;
+    font-weight: 600;
+    font-size: 20px;
+    text-align: center;
+    border-radius: 0;
+    position: absolute;
+    right: 16px;
+}
+
+ul.list-icon-text li a {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 64px;
+    color: #191919;
+}
+ul.list-icon-text li {
+    border-bottom: 1px solid #D9D9D9;
+}
+.btn-border {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    color: #191919;
+    width: 177px;
+    height: 57px;
+    border: 1px solid #787878;
+    background: #fff0;
+    margin-top: 30px;
+}
+.btn-border:hover {
+    background: #111;
+    color: #fff;
+}
+ul.list-icon-text li a img {
+    width: 40px;
+    margin-right: 15px;
+}
+
+#pills-tabContent .need-lawyer {
+    padding: 0;
+}
+#pills-tabContent.need-lawyer-popup {
+    background: #C2DDE4;
+}
+#pills-tabContent .cards.needs.alg {
+    width: 100%;
+}
+
+.group-george p.font-24 {
+    font-weight: 600;
+}
+.group-george p.font-16 {
+    font-size: 16px;
+    line-height: 24px;
+}
+.group-george p.font-16 i {
+    color: #3DC9A1;
+}
+img.img-user-pop {
+    width: 100%;
+    border-radius: 200px;
+}
+p.right.dot-three {
+    line-height: 1.3;
+    color: #191919;
+}
+input{outline: none;}
+.group-invite input {
+    height: 53px;
+    border: 0.75px solid #85BACA;
+    border-radius: 15px;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 20px;
+    color: #191919;
+    width: 100%;
+    padding: 0 15px;
+}
+.eles.group-invite {
+    padding: 0;
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+::placeholder{    color: #191919;}
+.Select-members h5.font-24 {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 36px;
+    color: #191919;
+}
+.Select-members p {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    color: #191919;
+}
+.Select-members .law-box h5 {
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 36px;
+    color: #191919;
+}
+.Select-members .law-box p {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 27px;
+    color: #191919;
+}
+.create-group {
+    width: 290px;
+    height: 52px;
+    background: #208C84;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 35px;
+    text-align: center;
+    color: #FFFFFF;
+    border: none;
+}
+.rounded {
+    border-radius: 15px !important;
+}
+ .btn-close.rounded {
+    border-radius: 5px !important;
+}
+textarea.description {
+    height: 107px;
+}
+select {
+    height: 53px;
+    border: 0.75px solid #85BACA;
+    border-radius: 15px;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 20px;
+    color: #191919;
+    width: 100%;
+    padding: 0 15px;
+}
+p.font-fee {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 20px;
+    color: #191919;
+}
+span.aed-0 {
+    border: 0.75px solid #85BACA;
+    border-radius: 15px;
+    padding: 10px 15px 10px 40px;
+}
+.form-popup-des button.btn-lgn { 
+    padding: 3px 10px; 
+}
+
+h4.give-rating {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 48px;
+    color: #156075;
+}
+ul.your-rating li {
+    list-style: none;
+    display: inline-block;
+    color: #FFAC33;
+    font-size: 30px;
+}
+ul.your-rating li p {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 30px;
+    color: #156075;
+    position: relative;
+    top: -3px;
+}
+
+
+@media (max-width:991px) {  
+#pills-tabContent .need-lawyer .eles {
+    margin-bottom: 20px;
+}
+.Select-members .law-box h5 { 
+    font-size: 18px;
+    line-height: 24px; 
+}
+.Select-members .law-box p { 
+    font-size: 15px;
+    line-height: 22px; 
+}
+.group-invite input { 
+    font-size: 12px; 
+}
+.eles.group-invite.area input {
+    font-size: 16px;
+}
+.eles.group-invite.area  select {
+    font-size: 16px;
+}
+.eles.group-invite.area  textarea {
+    font-size: 16px;
+}
+p.font-fee { 
+    font-size: 16px; 
+}
+
+}
+
+@media (max-width:767px) {  
+ul.list-icon-text li a { 
+    font-size: 15px;
+    line-height: 60px; 
+}
+.btn-border { 
+    font-size: 16px; 
+    width: 165px;
+    height: 45px; 
+}
+img.popup-prem {
+    width: 95%;
+}
+p.right.dot-three {
+    line-height: 17px; 
+}
+#pills-tabContent  p.name-uaser {
+    font-size: 14px;
+    line-height: 19px;
+}
+#pills-tabContent .cards.needs p.name-uaser {
+    font-size: 9px;
+    line-height: 19px;
+}
+#pills-tabContent .need-lawyer .eles {
+    margin-bottom: 10px;
+}
+.Select-members p { 
+    font-size: 15px;
+    line-height: 25px; 
+}
+.Select-members h5.font-24 { 
+    font-size: 18px;
+    line-height: 30px; 
+}
+.create-group {
+    width: 100%;
+    height: 40px; 
+    font-size: 16px;
+    line-height: 25px; 
+}
+
+
+}
+
+
+
