--- a/dashborad_apge/css/style.css
+++ b/dashborad_apge/css/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
+    color: #191919;
 }
 
 img {
@@ -2493,7 +2494,7 @@ p {
 }
 
 .d-flex1 li h1 {
-    font-size: 32px;
+    font-size: 24px;
     line-height: 48px;
     font-weight: 600;
     letter-spacing: 0em;
@@ -3645,17 +3646,44 @@ a.add img {
 .dropdown-menu li {
     display: inline;
 }
-
 a.dropdown-item img {
-    width: 30px;
+    width: 20px;
+}
+
+.img-width a.dropdown-item img {
+    width: 18px;
 }
 
 .moreoption .dropdown-menu[data-bs-popper] {
     top: 100%;
     left: auto;
-    right: 0;
+    right: -12px;
     margin-top: 0.125rem;
+    position: absolute;
+    top: 60px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
 }
+.moreoption .dropdown-menu:before {
+    content: "";
+    position: absolute;
+    top: -6px;
+    right: 23px;
+    width: 0;
+    height: 0;
+    box-shadow: 2px -2px 6px rgb(0 0 0 / 5%);
+    border-top: 6px solid #FFFFFF;
+    border-right: 6px solid #FFFFFF;
+    border-bottom: 6px solid transparent;
+    border-left: 6px solid transparent;
+    transform: rotate(-45deg);
+    mix-blend-mode: multiple;
+}
+
+
 
 .msg-body ul {
     overflow: hidden;
@@ -5508,3 +5536,9 @@ border-radius: 10px;
         outline:none;
         }
         
+
+        .head-fixed {
+            position: fixed;
+            z-index: 99999;
+            width: -webkit-fill-available;
+        }
